--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                       Website:<strong>www.gsimr.co.in</strong> </p><br>
                 </div>
           <div style="padding-bottom: 0%;">         <!-- <div style=" padding-right: 0%; padding-left: 100%; padding-right: 100%; padding-bottom: 0%;"> -->
-                    <p class="para3" style="font-weight: lighter; font-size: small; ">All Rights Reserved <br> Naman Kaushik <br>Gourav Gawande</p>
+                    <p class="para3" style="font-weight: lighter; font-size: small; ">All Rights Reserved <br> Gourav Gawande <br>Naman Kaushik</p>
                 </div>
            
           </div>        
