--- a/Format.html
+++ b/Format.html
@@ -76,7 +76,7 @@
         <div><h2 class="sec-2-title" style="text-align: center;">
         FORMAT FOR RESEARCH PAPER SUBMISSION
         </h2> <br>
-        <p class="para2" style="align-items: center;" >• Abstract Submission : Purpose, Design /Methodology/ Approach, Findings, Limitations
+        <p class="para2" style="align-items: center;width:90%;" >• Abstract Submission : Purpose, Design /Methodology/ Approach, Findings, Limitations
             Contributions, Keywords (up to six keywords) , Word Count: 200-250 words. <br>
             • Body:Times New Roman with 12 font size, single space and single column on standard A4
             size paper. <br>
@@ -99,7 +99,7 @@
                       REGISTRATION PROCESS
 
                     </h2> <br>
-                    <p class="para2">◦ To register scan QR or click the link below. <br>
+                    <p class="para2" style="align-items: center;width:90%;">◦ To register scan QR or click the link below. <br>
                         • In case of multiple authors, the author and co-author must register individually, and
                         certificates will be awarded only to those who have registered. <br>
                         • You can register by paying the registration fee through NEFT / RTGS / Online Payment-
